[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ['src']  # ['.'] by default
include = ['*']  # ['*'] by default
exclude = ['tests*', 
           'smax_daemon']

[project]
name = 'wsma_cryostat_compressor'
authors = [{name="Paul Grimes", email="pgrimes@cfa.harvard.edu"}]
description = 'wSMA cryostat compressor control and monitoring code'
readme = 'README.md'
requires-python = '>=3.10'
license = {text = 'MIT License'}
dependencies = [
    'pymodbus >= 3.8',
    'systemd-python',
    'retrying',
    'smax @ https://github.com/Smithsonian/smax-python/archive/refs/tags/v1.0.3.zip'
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "wsma_cryostat_compressor.__version__"}

[project.scripts]
compressor = "wsma_cryostat_compressor.cli:main"
inverter = "wsma_cryostat_compressor.inverter_cli:main"
